--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
     <nav class="navbar navnar-expand-lg navbar-light bg-light font justify-content-space-between mb-1">
       <%= link_to "受付",edit_receptions_path, class:'navbar-brand text-center flex-grow-1' %>
       <%= link_to "連絡帳",notes_path, class:'navbar-brand text-center flex-grow-1' %>
-      <%= link_to "月間予定",edit_calendars_path, class:'navbar-brand text-center flex-grow-1' %>
+      <%= link_to "月間利用",edit_calendars_path, class:'navbar-brand text-center flex-grow-1' %>
       <%= link_to "利用状況",receptions_path, class:'navbar-brand text-center flex-grow-1' %>
       <button class="navbar-toggler" type="button"
       data-toggle="collapse"
