--- a/app/views/modals/_calendars-edit-modal.html.erb
+++ b/app/views/modals/_calendars-edit-modal.html.erb
@@ -11,20 +11,22 @@
         【利用日の投稿】<br>
         １５日を利用したい場合<br>
         <div class="d-flex align-items-center">
+          <div>カレンダーの</div>
           <div class="modal-circle">15</div>
-          <div>タップ後に</div>
+          <div>日をタップ</div>
           <div class="modal-circle-selected">15</div>
-          <div>にして送信</div>
+          <div>して送信</div>
         </div>
         ※複数選択も可能<br>
         <br>
         【利用日の取り消し】<br>
         １５日を取り消したい場合<br>
         <div class="d-flex align-items-center">
+          <div>カレンダーの</div>
           <div class="modal-circle-selected">15</div>
-          <div>タップ後に</div>
+          <div>日をタップ</div>
           <div class="modal-circle">15</div>
-          <div>にして送信</div>
+          <div>して送信</div>
         </div>
         ※複数選択も可能<br>
         <br>
