flatpickrのカレンダーの月表示をレスポンシブ対応に修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -237,3 +237,7 @@ footer {
 .space {
   width: 30px;
 }
+
+.flatpickr-current-month .flatpickr-monthDropdown-months {
+  background: #42a5f5 !important;
+}
