--- a/app/assets/stylesheets/receptions.scss
+++ b/app/assets/stylesheets/receptions.scss
@@ -1,3 +1,43 @@
+.header-width {
+  width: clamp(280px, 55vw, 430px);
+}
+
+@mixin index-color($bgc: #fff) {
+  background-color: $bgc;
+  box-shadow: 0 0 0 2px #fff0f5, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
+}
+.bgc-pink {
+  @include index-color(#fff0f5);
+}
+.bgc-org {
+  @include index-color(#fdf5e6);
+}
+.bgc-green {
+  @include index-color(#f0fff0);
+}
+.bgc-blue {
+  @include index-color(#f0ffff);
+}
+
+.bgc-grey {
+  background-color: #dcdcdc;
+  box-shadow: 0 0 0 2px #dcdcdc, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
+}
+.stitch-index {
+  padding: 4px 10px;
+  margin-bottom: 1em;
+  color: #333;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.3em;
+  border: 1px dashed #fff;
+  border-radius: 2px;
+  text-shadow: 1px 1px #fff;
+  font-weight: normal;
+  width: clamp(175px, 33vw, 225px);
+  margin: 0 auto;
+}
+
 .reception-button {
   display: flex;
   border: none;
@@ -15,75 +55,4 @@
 }
 .btn-disable {
   background-color: #cccccc !important;
-}
-
-.header-width {
-  width: clamp(280px, 55vw, 430px);
-}
-
-.bgc-pink {
-  background-color: #fff0f5;
-  box-shadow: 0 0 0 2px #fff0f5, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
-}
-.bgc-org {
-  background-color: #fdf5e6;
-  box-shadow: 0 0 0 2px #fdf5e6, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
-}
-.bgc-green {
-  background-color: #f0fff0;
-  box-shadow: 0 0 0 2px #f0fff0, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
-}
-.bgc-blue {
-  background-color: #f0ffff;
-  box-shadow: 0 0 0 2px #f0ffff, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
-}
-
-.bgc-grey {
-  background-color: #dcdcdc;
-  box-shadow: 0 0 0 2px #dcdcdc, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
-}
-.stitch-index {
-  padding: 4px 10px;
-  margin-bottom: 1em;
-  color: #333;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 1.3em;
-  border: 1px dashed #fff;
-  border-radius: 2px;
-
-  text-shadow: 1px 1px #fff;
-  font-weight: normal;
-  width: clamp(175px, 33vw, 225px);
-  margin: 0 auto;
-}
-.stitch-show {
-  padding: 12px 10px;
-  background: #dcdcdc;
-  color: #343a40;
-  font-size: 21px;
-  font-weight: bold;
-  line-height: 1.3em;
-  border: 2px dashed #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 0 4px #dcdcdc, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: normal;
-  width: clamp(345px, 75vw, 450px);
-  margin: 0 auto;
-}
-
-.name-box {
-  padding: 4px 10px;
-  margin-bottom: 1em;
-  background: #cccccc;
-  color: #343a40;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 1.3em;
-  border: 1px dashed #fff;
-  border-radius: 2px;
-  box-shadow: 0 0 0 2px #cccccc, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
-  text-shadow: 1px 1px #fff;
-  font-weight: normal;
-  margin: 0 auto;
 }
