--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,7 +68,7 @@ footer {
   bottom: 0;
 }
 
-@mixin blue-stitch($fSize: 20px) {
+@mixin blue-stitch($fSize) {
   font-size: $fSize;
   padding: 0.2em 0.5em;
   margin: 1em 0 0.5em 0;
@@ -85,7 +85,7 @@ footer {
   border-radius: 10px;
 }
 .stitch-blue {
-  @include blue-stitch();
+  @include blue-stitch(20px);
 }
 
 .stitch-blue p {
@@ -114,7 +114,7 @@ footer {
   }
 }
 
-@mixin footer-btn($bgc: #55acee) {
+@mixin footer-btn($bgc) {
   background: $bgc;
   color: #ffffff;
   border: none;
@@ -125,7 +125,7 @@ footer {
 
 .footer-menus {
   .home-btn {
-    @include footer-btn();
+    @include footer-btn(#55acee);
     border-bottom-left-radius: 15px;
     border-top-right-radius: 0;
     border-top-left-radius: 15px;
