--- a/app/assets/stylesheets/receptions.scss
+++ b/app/assets/stylesheets/receptions.scss
@@ -2,7 +2,7 @@
   width: clamp(280px, 55vw, 430px);
 }
 
-@mixin index-color($bgc: #fff) {
+@mixin index-color($bgc) {
   background-color: $bgc;
   box-shadow: 0 0 0 2px #fff0f5, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
 }
