ツイッターカードURL再変更2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://houday-web-note.herokuapp.com/"/>
     <meta property="og:title" content="放課後等デイサービス専用アプリHouday Web Note"/>
     <meta property="og:description" content="これはポートフォリオサイトです。"/>
-    <meta property="og:image" content="/images/houday-web-note.jpg"/>
+    <meta name="twitter:image" content="/images/houday-web-note.jpg"/>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'calendar', 'data-turbolinks-track': 'reload' if controller_name == 'calendars' %>
