README.mdファイルの誤字を修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>HoudayWebNote</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%# <meta name="viewport" content="width=device-width,initial-scale=1"> %>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@Yasu"/>
     <meta property="og:url" content="https://houday-web-note.herokuapp.com/"/>
